K/kubefed-PnWnkpCmoM1/kubefed.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubefed-admission-webhook
  namespace: PnWnkpCmoM1
spec:
  selector:
    kubefed-admission-webhook: "true"
  ports:
    - port: 443
      targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubefed-controller-manager
  namespace: PnWnkpCmoM1
  labels:
    kubefed-control-plane: controller-manager
spec:
  replicas: 2
  selector:
    matchLabels:
      kubefed-control-plane: controller-manager
  strategy: {}
  template:
    metadata:
      labels:
        kubefed-control-plane: controller-manager
    spec:
      serviceAccountName: kubefed-controller
      containers:
        - args:
            - --kubefed-namespace=$(KUBEFED_NAMESPACE)
          command:
            - /hyperfed/controller-manager
          image: quay.io/kubernetes-multicluster/kubefed:canary
          imagePullPolicy: IfNotPresent
          name: controller-manager
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 3
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
      terminationGracePeriodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: PnWnkpCmoM1
  name: kubefed-admission-webhook
  labels:
    kubefed-admission-webhook: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      kubefed-admission-webhook: "true"
  template:
    metadata:
      labels:
        kubefed-admission-webhook: "true"
    spec:
      serviceAccountName: kubefed-admission-webhook
      containers:
        - name: admission-webhook
          image: quay.io/kubernetes-multicluster/kubefed:canary
          imagePullPolicy: IfNotPresent
          command:
            - /hyperfed/webhook
            - --secure-port=8443
            - --audit-log-path=-
            - --tls-cert-file=/var/serving-cert/tls.crt
            - --tls-private-key-file=/var/serving-cert/tls.key
            - --v=8
          ports:
            - containerPort: 8443
          volumeMounts:
            - mountPath: /var/serving-cert
              name: serving-cert
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8443
              scheme: HTTPS
      volumes:
        - name: serving-cert
          secret:
            defaultMode: 420
            secretName: kubefed-admission-webhook-serving-cert
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mutation.core.kubefed.k8s.io
webhooks:
  - name: kubefedconfigs.core.kubefed.k8s.io
    clientConfig:
      service:
        namespace: default
        name: kubefed-admission-webhook
        path: /apis/mutation.core.kubefed.k8s.io/v1beta1/kubefedconfigs
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPVENDQWlHZ0F3SUJBZ0lRWHBzRDRaWnk4a0pJSEZqZ2ZxcWpKekFOQmdrcWhraUc5dzBCQVFzRkFEQW4KTVNVd0l3WURWUVFERXh4cmRXSmxabVZrTFdGa2JXbHpjMmx2YmkxM1pXSm9iMjlyTFdOaE1CNFhEVEl5TURZeApNakV5TURNME1Wb1hEVE15TURZd09URXlNRE0wTVZvd0p6RWxNQ01HQTFVRUF4TWNhM1ZpWldabFpDMWhaRzFwCmMzTnBiMjR0ZDJWaWFHOXZheTFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQUxkbjRKUVZrMWx5VG9hZENBYlUrWWtKY2F0aTdNdW9nVEZxUi90dmxjZzN5T2FFVExueTR3QmVNU2Ntd081dQpIOC9MNDNqcWZC [...]
    rules:
      - operations:
          - CREATE
        apiGroups:
          - core.kubefed.k8s.io
        apiVersions:
          - v1beta1
        resources:
          - kubefedconfigs
    failurePolicy: Fail
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validations.core.kubefed.k8s.io
webhooks:
  - name: federatedtypeconfigs.core.kubefed.k8s.io
    clientConfig:
      service:
        namespace: default
        name: kubefed-admission-webhook
        path: /apis/validation.core.kubefed.k8s.io/v1beta1/federatedtypeconfigs
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPVENDQWlHZ0F3SUJBZ0lRWHBzRDRaWnk4a0pJSEZqZ2ZxcWpKekFOQmdrcWhraUc5dzBCQVFzRkFEQW4KTVNVd0l3WURWUVFERXh4cmRXSmxabVZrTFdGa2JXbHpjMmx2YmkxM1pXSm9iMjlyTFdOaE1CNFhEVEl5TURZeApNakV5TURNME1Wb1hEVE15TURZd09URXlNRE0wTVZvd0p6RWxNQ01HQTFVRUF4TWNhM1ZpWldabFpDMWhaRzFwCmMzTnBiMjR0ZDJWaWFHOXZheTFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQUxkbjRKUVZrMWx5VG9hZENBYlUrWWtKY2F0aTdNdW9nVEZxUi90dmxjZzN5T2FFVExueTR3QmVNU2Ntd081dQpIOC9MNDNqcWZC [...]
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - core.kubefed.k8s.io
        apiVersions:
          - v1beta1
        resources:
          - federatedtypeconfigs
          - federatedtypeconfigs/status
    failurePolicy: Fail
  - name: kubefedclusters.core.kubefed.k8s.io
    clientConfig:
      service:
        namespace: default
        name: kubefed-admission-webhook
        path: /apis/validation.core.kubefed.k8s.io/v1beta1/kubefedclusters
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPVENDQWlHZ0F3SUJBZ0lRWHBzRDRaWnk4a0pJSEZqZ2ZxcWpKekFOQmdrcWhraUc5dzBCQVFzRkFEQW4KTVNVd0l3WURWUVFERXh4cmRXSmxabVZrTFdGa2JXbHpjMmx2YmkxM1pXSm9iMjlyTFdOaE1CNFhEVEl5TURZeApNakV5TURNME1Wb1hEVE15TURZd09URXlNRE0wTVZvd0p6RWxNQ01HQTFVRUF4TWNhM1ZpWldabFpDMWhaRzFwCmMzTnBiMjR0ZDJWaWFHOXZheTFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQUxkbjRKUVZrMWx5VG9hZENBYlUrWWtKY2F0aTdNdW9nVEZxUi90dmxjZzN5T2FFVExueTR3QmVNU2Ntd081dQpIOC9MNDNqcWZC [...]
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - core.kubefed.k8s.io
        apiVersions:
          - v1beta1
        resources:
          - kubefedclusters
    failurePolicy: Fail
  - name: kubefedconfigs.core.kubefed.k8s.io
    clientConfig:
      service:
        namespace: default
        name: kubefed-admission-webhook
        path: /apis/validation.core.kubefed.k8s.io/v1beta1/kubefedconfigs
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPVENDQWlHZ0F3SUJBZ0lRWHBzRDRaWnk4a0pJSEZqZ2ZxcWpKekFOQmdrcWhraUc5dzBCQVFzRkFEQW4KTVNVd0l3WURWUVFERXh4cmRXSmxabVZrTFdGa2JXbHpjMmx2YmkxM1pXSm9iMjlyTFdOaE1CNFhEVEl5TURZeApNakV5TURNME1Wb1hEVE15TURZd09URXlNRE0wTVZvd0p6RWxNQ01HQTFVRUF4TWNhM1ZpWldabFpDMWhaRzFwCmMzTnBiMjR0ZDJWaWFHOXZheTFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQUxkbjRKUVZrMWx5VG9hZENBYlUrWWtKY2F0aTdNdW9nVEZxUi90dmxjZzN5T2FFVExueTR3QmVNU2Ntd081dQpIOC9MNDNqcWZC [...]
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - core.kubefed.k8s.io
        apiVersions:
          - v1beta1
        resources:
          - kubefedconfigs
    failurePolicy: Fail
